manifests/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../temp-dock-comp.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
    group: titanic
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../temp-dock-comp.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: DATABASE_HOST
              value: 127.0.0.1
            - name: POSTGRES_DB
              value: root
            - name: POSTGRES_PASSWORD
              value: root
            - name: POSTGRES_USER
              value: root
          image: kind-registry:5000/titanic-postgres:1.0.0
          name: postgres
          resources: {}
      restartPolicy: Always
status: {}
