manifests/titanic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../temp-dock-comp.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: titanic
    group: titanic
  name: titanic
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: titanic
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../temp-dock-comp.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: titanic
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: root
            - name: POSTGRES_HOST
              value: postgres
            - name: POSTGRES_PASSWORD
              value: root
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_USER
              value: root
          image: kind-registry:5000/titanic:1.0.0
          name: titanic
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
