manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titanic
  labels:
    group: titanic
spec:
  rules:
  - host: api.awesome
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: titanic
            port:
              number: 8080
